<resources>
    <string name="app_name">ZS</string>
    <string name="notification_running_background_text">ZS正在运行</string>
    <string name="confirm">确认</string>
    <string name="makesure">确定</string>
    <string name="notice">提醒</string>
    <string name="cancel">取消</string>
    <string name="reqing">正在请求...</string>
    <string name="reqsuccess">请求成功...</string>
    <string name="dealsuccess">操作成功...</string>
    <string name="error">出错啦~</string>
    <string name="upload">上传失败</string>
    <string name="has_connected">已连接</string>
    <string name="has_connecting">正在连接</string>
    <string name="has_connected_false">已断连</string>
    <string name="has_server_connecting">服务器正在重新连接</string>
    <string name="has_connected_false_out">请检查网络连接是否正常，并重新登录</string>
    <string name="video_biaoqing">标清</string>
    <string name="video_gaoqing">高清</string>
    <string name="video_chaoqing">超清</string>
    <string name="capture_cha">较差 采集:</string>
    <string name="capture_yiban">一般 采集:</string>
    <string name="capture_lianghao">良好 采集:</string>
    <string name="has_power_float">你还没有悬浮框权限，请开启</string>
    <string name="has_power_no">存在不被允许的权限，可能会影响部分功能的使用</string>
    <string name="auth_hint_account">请输入用户名</string>
    <string name="login_err">登录失败，请检查账户和网络信息</string>
    <string name="hint_auth_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="login_name_empty">用户名不能为空</string>
    <string name="login_password_empty">密码不能为空</string>
    <string name="login_error">登录失败！用户名或者密码错误！</string>
    <string name="login_fail">登录超时,请稍后重试！</string>
    <string name="activity_input_url_address_hint">请输入服务器地址</string>
    <string name="activity_input_url_path_hint">请输入服务器端口</string>
    <string name="activity_input_url_address_empty">请输入正确的服务器地址</string>
    <string name="activity_input_url_path_empty">请输入正确的端口号</string>
    <string name="setip_by_scan">扫码设置IP</string>
    <string name="scan_error">扫描失败，请重试</string>
    <string name="qr_code_error">二维码内容不正确，请重试</string>
    <string name="activity_create_pw_hint">请输入密码</string>
    <string name="activity_create_pw_again_hint">请再次输入密码</string>
    <string name="activity_create_confirm_pw">创建密码</string>
    <string name="activity_create_confirm_again_pw">确认密码</string>
    <string name="activity_create_tip">请输入密码</string>
    <string name="activity_create_tip_equal">两次密码不一样，请重新输入</string>
    <string name="activity_create_update_error">密码更新失败</string>
    <string name="title_notification">通知</string>
    <string name="title_conference">会议调度</string>
    <string name="title_contacts">联系人</string>
    <string name="title_setting">设置</string>
    <string name="fragment_notice_invite_type_title">会议调度邀请</string>
    <string name="fragment_notice_invite_watch_type_title">观摩邀请</string>
    <string name="fragment_notice_kickout_type_title">请出会议调度</string>
    <string name="fragment_notice_description" formatted="false">邀请您参加</string>
    <string name="fragment_notice_description_watch" formatted="false">邀请您观摩</string>
    <string name="title_conference_notification">会议调度通知</string>
    <string name="fragment_setting_disturb">电话免打扰</string>
    <string name="fragment_setting_about">关于</string>
    <string name="fragment_setting_clear_cache">清除缓存</string>
    <string name="fragment_setting_clear_notification">（清除所有通知消息）</string>
    <string name="fragment_setting_logout">退出登录</string>
    <string name="about">关于</string>
    <string name="activity_about_update">版本更新</string>
    <string name="activity_about_already_new">已是最新版本</string>
    <string name="activity_about_has_new">有新版本请检查更新</string>
    <string name="meet_not_exit">会议调度不存在</string>
    <string name="meet_max_num">会议调度达到最大人数</string>
    <string name="white_board_not_exist">会议没有白板分享</string>
    <string name="white_board_has_exist">重复开启白板</string>
    <string name="white_board_not_opener">不是白板分享发起者</string>
    <string name="white_board_exist">会议已存在白板分享</string>
    <string name="white_board_start">开启白板失败</string>
    <string name="create_meet_err">创建会议失败</string>
    <string name="raise_hands_err">举手失败</string>
    <string name="joine_err">加入会议失败</string>
    <string name="send_nofity">发送邀请失败</string>
    <string name="start_play_err">视频记录不存在</string>
    <string name="delete_meet_err">删除会议失败</string>
    <string name="update_meet_err">修改会议失败</string>
    <string name="invite_user_err">邀请失败</string>
    <string name="cancel_invite_user_err">取消邀请失败</string>
    <string name="get_meet_info_err">获取会议信息失败</string>
    <string name="quite_talk_err">退出对讲失败</string>
    <string name="kitout_err">请出参会者失败</string>
    <string name="change_video_err">变换布局信息失败</string>
    <string name="getlayout_info_err">获取布局信息失败</string>
    <string name="jinyan_close_err">禁言失败</string>
    <string name="jinyan_open_err">解禁失败</string>
    <string name="start_talk_err">开启对讲失败</string>
    <string name="join_talk_err">加入对讲失败</string>
    <string name="create_group_err">创建群组失败</string>
    <string name="get_err">获取失败</string>
    <string name="delete_err">删除失败</string>
    <string name="quite_err">退出失败</string>
    <string name="update_err">修改失败</string>
    <string name="add_err">添加失败</string>
    <string name="open_white_board">进入白板失败</string>
    <string name="close_white_board">退出白板失败</string>
    <string name="update_white_board">更新白板失败</string>
    <string name="switch_meet_layout">更换布局失败</string>
    <string name="start_record">开启录像失败</string>
    <string name="unline">本次会议调度已结束</string>
    <string name="out_of_conference">您已经被请出会议调度</string>
    <string name="conference_title_left">人员</string>
    <string name="conference_title_right">摄像头</string>
    <string name="conference_title_middle">频道</string>
    <string name="channel_change_size">切换集群频道(%d)</string>
    <string name="channel_detail">频道详情</string>
    <string name="channel_detail_all_user">所有成员</string>
    <string name="channel_detail_channel_name">频道名称: %s</string>
    <string name="channel_detail_channel_id">频道ID: %s</string>
    <string name="channel_detail_channel_max_duration">单次说话最大时长: %d秒</string>
    <string name="experience_right_now">立即体验</string>
    <string name="update_title_force">版本升级</string>
    <string name="update_title_choose">版本升级</string>
    <string name="update_sd_card_not_ready">下载失败，请确认SD卡是否可用</string>
    <string name="update_download_error">下载失败</string>
    <string name="update_download_percent">已下载 %1$s</string>
    <string name="update_download">已下载</string>
    <string name="update_download_waite">等待中</string>
    <string name="update_download_latest_version">当前已是最新版本</string>
    <string name="update_checking">正在检查&#8230;</string>
    <string name="update_download_not_wifi_tip">当前为非WIFI网络，是否下载？</string>
    <string name="update_plugin_progress">正在下载 %1$s/%2$s</string>
    <string name="network_invalide">网络连接出现问题，请检查网络</string>
    <string name="no_data">暂无数据</string>
    <string name="network_timeout">网络不稳定，请稍后再试</string>
    <string name="network_error_common">系统错误</string>
    <string name="conference_finished">会话已结束</string>
    <string name="chat_info_title">聊天信息</string>
    <string name="create_conference">创建会议调度</string>
    <string name="video_chat">视频对讲</string>
    <string name="clear_chat_record">清除聊天记录</string>
    <string name="capture">采集</string>
    <string name="player">播放</string>
    <string name="player_faile">查看失败，对方无响应</string>
    <string name="capture_stop">关闭采集</string>
    <string name="load_kitout">登录踢出</string>
    <string name="other_load">你在另一台设备上登录</string>
    <string name="meet_kitout">会议踢出</string>
    <string name="meet_kitout_ed">你被踢出了会议[%1$s]</string>
    <string name="invisitor">对讲邀请</string>
    <string name="talk_invistor_miss">您未接听%1$s于%2$s的来电</string>
    <string name="meet_invistor_miss">您未参加%1$s于%2$s召开的会议调度</string>
    <string name="meet_invistor_attend">%1$s预约您于%2$s参加的会议调度取消</string>
    <string name="zuotian">昨天</string>
    <string name="qiantian">前天</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="time_long">时长:</string>
    <string name="city_map">城市列表</string>
    <string name="zhixiashi">直辖市或特别行政区</string>
    <string name="off_map">离线地图下载</string>
    <string name="pause">暂停</string>
    <string name="cont">继续</string>
    <string name="map_size">地图大小:%1$s</string>
    <string name="area_search">按地区查询</string>
    <string name="download">下载中</string>
    <string name="download_title">下载</string>
    <string name="max_download">同时最多下载三个</string>
    <string name="start_false">开始失败</string>
    <string name="pause_false">暂停失败</string>
    <string name="pre_load">准备下载</string>
    <string name="map_delete_false">删除失败</string>
    <string name="map_update_no">暂无更新</string>
    <string name="gps_open">请打开GPS</string>
    <string name="reload_msg">该账号已经在线，是否强制登录？</string>
    <string name="new_version">更新新版本</string>
    <string name="download_success">下载成功</string>
    <string name="download_false">下载失败</string>
    <string name="no_net">当前无网络</string>
    <string name="kitout_load">你已被踢出登录</string>
    <string name="chang_pwd">修改密码</string>
    <string name="old_pwd">请输入原密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="new_pwd_re">请再次输入密码</string>
    <string name="old_pwd_empty">原密码不能为空</string>
    <string name="new_pwd_empty">新密码不能为空</string>
    <string name="new_pwd_re_empty">重复新密码不能为空</string>
    <string name="pwd_diff">两次新密码不一致</string>
    <string name="pwd_has_changed">密码已修改</string>
    <string name="req_false">请求失败</string>
    <string name="is_loading">正在登录</string>
    <string name="is_loading_file">正在加载</string>
    <string name="count_pwd_empty">账户或密码不能为空</string>
    <string name="count_empty">账户不能为空</string>
    <string name="double_click_exit">再按一次退出应用程序</string>
    <string name="new_setting">联网设置</string>
    <string name="save_change">保存</string>
    <string name="ip_address_empty">IP / Port 不能为空</string>
    <string name="input_right_txt">请输入正确的IP地址</string>
    <string name="pore_right_txt">Port 为四位数字</string>
    <string name="img">图片</string>
    <string name="audio">音频</string>
    <string name="person_share">人员分享</string>
    <string name="person_share_from">来自%s的人员分享</string>
    <string name="person_share_device_from">来自%s的设备分享</string>
    <string name="device_share">设备分享</string>
    <string name="zhiling_diaodu">的指令调度</string>
    <string name="zhiling_diaodu_title">指令调度</string>
    <string name="zhiling_diaodu_temporary_group">临时指令调度组</string>
    <string name="is_delete_this_msg">是否删除这条消息?</string>
    <string name="search">搜索</string>
    <string name="person_msg">人员</string>
    <string name="group_msg">群组</string>
    <string name="content_msg">内容</string>
    <string name="device_name">摄像头</string>
    <string name="online">在线</string>
    <string name="offline_other">对方不在线</string>
    <string name="offline">不在线</string>
    <string name="empty_kongxian">空闲</string>
    <string name="capture_ing">采集中</string>
    <string name="talk_ing">对讲中</string>
    <string name="meet_ing">会议中</string>
    <string name="trunk_speak_ing">集群对讲中</string>
    <string name="offline_1">(不在线)</string>
    <string name="empty_kongxian_1">(空闲)</string>
    <string name="capture_ing_1">(采集中...)</string>
    <string name="talk_ing_1">(对讲中...)</string>
    <string name="meet_ing_1">(会议中...)</string>
    <string name="edit">编辑</string>
    <string name="selected_all">全选</string>
    <string name="find_new_version">发现了新版本</string>
    <string name="new_version_has_complete">新版本已准备好，是否安装?</string>
    <string name="delete">删除</string>
    <string name="use_encrypt">是否通讯加密</string>
    <string name="my_map">我的地图</string>
    <string name="my_map_no_mark">没有发现标记</string>
    <string name="encrypt_change_psw">修改加密口令</string>
    <string name="encrypt_destory_local_secret_key">销毁本地加密密钥</string>
    <string name="encrypt_card_psw">加密卡密码</string>
    <string name="encrypt_card_psw_hint">请输入加密卡密码</string>
</resources>