<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/radius_white_solid"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:text="@string/find_new_version"
        android:textColor="#323232"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_errinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="@string/new_version_has_complete"
        android:textColor="#323232"
        tools:ignore="HardcodedText" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/black666" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_errinfo"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#323232" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp"
            android:layout_marginTop="6dp"
            android:background="@color/black666" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_errinfo"
            android:gravity="center"
            android:text="@string/makesure"
            android:textColor="@color/blue" />

    </LinearLayout>


</LinearLayout>