<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zs.ui.encrypt.EncryptSettingActivity">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="15dp"
        android:background="#fff"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/tv_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/encrypt_card_psw"
            android:textColor="#333"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/edt_pwd"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="41dp"
            android:background="@color/white"
            android:gravity="right|center_vertical"
            android:hint="@string/encrypt_card_psw_hint"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="#333"
            android:textSize="16sp"
            tools:ignore="LabelFor" />


    </LinearLayout>



    <RelativeLayout
        android:id="@+id/rl_encrypt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/use_encrypt"
            android:textColor="@color/black333"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/cb_encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:button="@drawable/selector_toggle_btn"
            android:padding="5dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_change_psw"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/encrypt_change_psw"
            android:textColor="@color/black333"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textColor="@color/black999"
            android:textSize="16sp" />

    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:id="@+id/rl_update_secret_key"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="40dp"-->
        <!--android:background="@color/white">-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="15dp"-->
            <!--android:text="@string/encrypt_update_secret_key"-->
            <!--android:textColor="@color/black333"-->
            <!--android:textSize="16sp" />-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_centerVertical="true"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:drawablePadding="10dp"-->
            <!--android:drawableRight="@drawable/ic_arrow_right"-->
            <!--android:ellipsize="end"-->
            <!--android:gravity="right"-->
            <!--android:paddingRight="15dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColor="@color/black999"-->
            <!--android:textSize="16sp" />-->

    <!--</RelativeLayout>-->
    <RelativeLayout
        android:id="@+id/rl_destory_local_secret_key"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/encrypt_destory_local_secret_key"
            android:textColor="@color/black333"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_arrow_right"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingRight="15dp"
            android:singleLine="true"
            android:textColor="@color/black999"
            android:textSize="16sp" />

    </RelativeLayout>
    <LinearLayout
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <Button
            android:id="@+id/btn_register"
            android:text="注册"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_init"
            android:text="初始化"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_bind"
            android:text="绑定"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/btn_unbind"
            android:text="解绑定"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
